Scrollbar issue on windows fixed

--- a/front-end/scss/framework/mixins/_bounce-scroll.scss
+++ b/front-end/scss/framework/mixins/_bounce-scroll.scss
@@ -1,5 +1,5 @@
 @mixin bounce-scroll() {
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 }
